# LogMorph

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  start-dev.bat
backend/: .env.example  alembic.ini  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 1e4456f41a1d_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/core/: deps.py  encryption.py  logging.py  security.py
backend/app/models/: __init__.py  ai.py  alert.py  analysis.py  log.py  parser.py  project.py  search.py  settings.py  user.py  user_project_access.py
backend/app/providers/: __init__.py  azure.py  base.py  bedrock.py  claude.py  google.py  kimi.py  lmstudio.py  ollama.py  openai.py  openrouter.py  registry.py
backend/app/routers/: ai.py  alerts.py  auth.py  dashboard.py  logs.py  parsers.py  projects.py  settings.py
backend/app/schemas/: __init__.py  ai.py  alert.py  analysis.py  log.py  parser.py  project.py  search.py  settings.py  user.py
backend/app/services/: ai_service.py  parser_service.py  watcher_service.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: RawLogTerminal.tsx
frontend/src/pages/: AlertsPage.tsx  AnalysisPage.tsx  DashboardPage.tsx  LogViewerPage.tsx  LoginPage.tsx  ParsersPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  (+1 more)
tauri/: Cargo.toml  generate-icons.py  tauri.conf.json
tauri/icons/: icon.icns
tauri/src/: main.rs
(+14 files in other folders)
